--- a/nextend/styles/globals.scss
+++ b/nextend/styles/globals.scss
@@ -145,7 +145,7 @@ code {
 // Full Desktops media query
 @media (min-width: 1400px) {
   .container {
-    max-width: 1300px;
+    max-width: 1100px;
   }
   .section__header {
     font-size: 1.7rem;
